getting the styles to apply to scratch gui

--- a/src/assets/stylesheets/ExternalStyles.scss
+++ b/src/assets/stylesheets/ExternalStyles.scss
@@ -5,94 +5,94 @@
 @use "../../../node_modules/prismjs/plugins/line-highlight/prism-line-highlight.css";
 @use "../../../node_modules/material-symbols/sharp.scss";
 @use "../../../node_modules/plotly.js/src/css/style.scss" as plotlyStyle;
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/oldtimey-mode/oldtimey-mode.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/modal/modal.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/menu-bar/account-nav.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/menu-bar/login-dropdown.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/menu-bar/settings-menu.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/menu-bar/user-avatar.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/menu-bar/menu-bar.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/menu-bar/author-info.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/menu-bar/share-button.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/menu-bar/save-status.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/menu-bar/community-button.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/menu-bar/project-title-input.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/nineties-mode/nineties-mode.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/blocks/blocks.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/prompt/prompt.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/icon-button/icon-button.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/question/question.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/controls/controls.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/sprite-selector/sprite-selector.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/drag-layer/drag-layer.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/connection-modal/connection-modal.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/asset-panel/selector.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/asset-panel/asset-panel.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/spinner/spinner.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/watermark/watermark.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/sprite-info/sprite-info.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/backpack/backpack.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/library/library.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/sound-editor/sound-editor.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/close-button/close-button.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/meter/meter.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/stage-wrapper/stage-wrapper.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/sprite-selector-item/sprite-selector-item.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/extension-button/extension-button.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/extension-button/extension-button.raw.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/filter/filter.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/prehistoric-mode/prehistoric-mode.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/slider-prompt/slider-prompt.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/loader/loader.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/stop-all/stop-all.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/play-button/play-button.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/green-flag/green-flag.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/menu/menu.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/target-pane/target-pane.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/library-item/library-item.raw.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/library-item/library-item.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/stage/stage.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/toggle-buttons/toggle-buttons.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/tag-button/tag-button.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/crash-message/crash-message.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/debug-modal/debug-modal.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/action-menu/action-menu.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/forms/label.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/forms/input.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/language-selector/language-selector.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/gui/gui.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/stage-header/stage-header.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/record-modal/record-modal.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/webgl-modal/webgl-modal.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/button/button.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/monitor-list/monitor-list.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/browser-modal/browser-modal.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/progress-ring/progress-ring.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/delete-confirmation-prompt/delete-confirmation-prompt.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/loupe/loupe.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/divider/divider.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/context-menu/context-menu.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/waveform/waveform.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/telemetry-modal/telemetry-modal.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/audio-trimmer/audio-trimmer.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/coming-soon/coming-soon.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/box/box.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/direction-picker/direction-picker.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/direction-picker/dial.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/mic-indicator/mic-indicator.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/turbo-mode/turbo-mode.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/alerts/alerts.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/alerts/alert.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/alerts/inline-message.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/cards/card.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/stage-selector/stage-selector.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/monitor/monitor.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/delete-button/delete-button.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/components/custom-procedures/custom-procedures.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/playground/player.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/playground/blocks-only.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/playground/index.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/css/z-index.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/css/typography.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/css/units.css";
-@import "../../../node_modules/scratch-gui/packages/scratch-gui/src/css/colors.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/oldtimey-mode/oldtimey-mode.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/modal/modal.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/menu-bar/account-nav.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/menu-bar/login-dropdown.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/menu-bar/settings-menu.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/menu-bar/user-avatar.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/menu-bar/menu-bar.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/menu-bar/author-info.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/menu-bar/share-button.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/menu-bar/save-status.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/menu-bar/community-button.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/menu-bar/project-title-input.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/nineties-mode/nineties-mode.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/blocks/blocks.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/prompt/prompt.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/icon-button/icon-button.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/question/question.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/controls/controls.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/sprite-selector/sprite-selector.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/drag-layer/drag-layer.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/connection-modal/connection-modal.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/asset-panel/selector.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/asset-panel/asset-panel.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/spinner/spinner.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/watermark/watermark.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/sprite-info/sprite-info.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/backpack/backpack.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/library/library.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/sound-editor/sound-editor.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/close-button/close-button.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/meter/meter.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/stage-wrapper/stage-wrapper.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/sprite-selector-item/sprite-selector-item.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/extension-button/extension-button.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/extension-button/extension-button.raw.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/filter/filter.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/prehistoric-mode/prehistoric-mode.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/slider-prompt/slider-prompt.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/loader/loader.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/stop-all/stop-all.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/play-button/play-button.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/green-flag/green-flag.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/menu/menu.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/target-pane/target-pane.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/library-item/library-item.raw.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/library-item/library-item.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/stage/stage.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/toggle-buttons/toggle-buttons.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/tag-button/tag-button.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/crash-message/crash-message.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/debug-modal/debug-modal.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/action-menu/action-menu.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/forms/label.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/forms/input.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/language-selector/language-selector.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/gui/gui.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/stage-header/stage-header.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/record-modal/record-modal.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/webgl-modal/webgl-modal.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/button/button.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/monitor-list/monitor-list.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/browser-modal/browser-modal.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/progress-ring/progress-ring.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/delete-confirmation-prompt/delete-confirmation-prompt.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/loupe/loupe.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/divider/divider.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/context-menu/context-menu.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/waveform/waveform.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/telemetry-modal/telemetry-modal.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/audio-trimmer/audio-trimmer.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/coming-soon/coming-soon.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/box/box.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/direction-picker/direction-picker.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/direction-picker/dial.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/mic-indicator/mic-indicator.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/turbo-mode/turbo-mode.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/alerts/alerts.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/alerts/alert.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/alerts/inline-message.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/cards/card.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/stage-selector/stage-selector.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/monitor/monitor.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/delete-button/delete-button.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/components/custom-procedures/custom-procedures.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/playground/player.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/playground/blocks-only.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/playground/index.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/css/z-index.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/css/typography.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/css/units.css";
+@import "../../../node_modules/@RaspberryPiFoundation/scratch-gui/src/css/colors.css";
