add display css property with variable to editor logo

--- a/src/assets/stylesheets/Sidebar.scss
+++ b/src/assets/stylesheets/Sidebar.scss
@@ -23,6 +23,7 @@
   block-size: $space-2-5;
   inline-size: $space-2-5;
   padding: $space-0-75;
+  display: var(--editor-logo-display, inherit);
 }
 
 .sidebar__bar {
