--- a/src/assets/stylesheets/Button.scss
+++ b/src/assets/stylesheets/Button.scss
@@ -35,7 +35,7 @@
 
   &--primary {
     background-color: var(--rpf-button-primary-background-color);
-    border-radius: $space-0-5;
+    border-radius: var(--rpf-button-primary-border-radius);
 
     color: var(--rpf-button-primary-text-color);
 
@@ -237,11 +237,15 @@
       }
 
       &:hover {
-        background-color: var(--rpf-button-tertiary-danger-background-color-hover);
+        background-color: var(
+          --rpf-button-tertiary-danger-background-color-hover
+        );
       }
 
       &:active {
-        background-color: var(--rpf-button-tertiary-danger-background-color-active);
+        background-color: var(
+          --rpf-button-tertiary-danger-background-color-active
+        );
       }
     }
   }
