Projects site integrated editor improvements (#1308)
- **Hide inline-end border for selected tab**
- **Add button border radius property**

This PR adds some variables that can be used in the projects site to
customise the style of the integrated editor projects. It also adds a
pseudo-element that can be toggled with a variable to affect the styling
of the sidebar tabs.

The designs for this are here:
https://www.figma.com/design/2XzRDyXtthyzeNMZtdChTQ/Projects-site---Designs?node-id=10785-10788&m=dev

See corresponding projects site changes here:
https://github.com/RaspberryPiFoundation/projects-ui/pull/3611

--- a/src/assets/stylesheets/Sidebar.scss
+++ b/src/assets/stylesheets/Sidebar.scss
@@ -58,6 +58,19 @@
     border-radius: $space-0-5 0 0 $space-0-5;
     border-block: 1px solid var(--sidebar-border);
     border-inline-start: 1px solid var(--sidebar-border);
+    position: relative;
+    z-index: 1;
+
+    ::after {
+      content: "";
+      position: absolute;
+      top: -8px;
+      bottom: -1px;
+      right: -11px;
+      width: var(--sidebar-border-obscurer-width);
+      height: 60px;
+      background-color: var(--sidebar-panel-background);
+    }
 
     .sidebar__bar-option {
       border: 2px solid var(--sidebar-option-selected-border);
