--- a/src/assets/stylesheets/ProgressBar.scss
+++ b/src/assets/stylesheets/ProgressBar.scss
@@ -1,4 +1,4 @@
-@use './rpf_design_system/spacing' as *;
+@use "./rpf_design_system/spacing" as *;
 
 .progress-bar {
   accent-color: var(--editor-color-theme);
@@ -16,4 +16,11 @@
   .btn-outer {
     padding: $space-0-5;
   }
+}
+
+.step-counter {
+  display: var(--display-step-counter, none);
+  align-items: center;
+  justify-content: center;
+  margin: $space-0-5 0 0 0;
 }
