use new var for progress bar colour

--- a/src/assets/stylesheets/ProgressBar.scss
+++ b/src/assets/stylesheets/ProgressBar.scss
@@ -1,7 +1,7 @@
 @use "./rpf_design_system/spacing" as *;
 
 .progress-bar {
-  accent-color: var(--editor-color-theme);
+  accent-color: var(--progress-bar-color, var(--editor-color-theme));
   display: flex;
   align-items: center;
   justify-content: center;
