--- a/src/assets/stylesheets/Button.scss
+++ b/src/assets/stylesheets/Button.scss
@@ -150,7 +150,7 @@
 
     &:hover,
     .btn-outer:hover & {
-      background-color: var(--tertiary-btn-hover-color);
+      background-color: var(--tertiary-btn-hover-color, inherit);
     }
 
     &:disabled {
