--- a/src/assets/stylesheets/ProgressBar.scss
+++ b/src/assets/stylesheets/ProgressBar.scss
@@ -1,4 +1,4 @@
-@use "./rpf_design_system/spacing" as *;
+@use './rpf_design_system/spacing' as *;
 
 .progress-bar {
   accent-color: var(--progress-bar-color, var(--editor-color-theme));
