--- a/src/assets/stylesheets/ProgressBar.scss
+++ b/src/assets/stylesheets/ProgressBar.scss
@@ -38,5 +38,5 @@
   display: var(--display-step-counter, none);
   align-items: center;
   justify-content: center;
-  margin: 0 0 0 0;
+  margin: 0;
 }
