Add variable for tertiary button hover override (#1311)
Adds variables so we can control:
- button hover state for tertiary buttons
- background colour of code blocks in the instruction panel

So that we can change the way the editor looks in the project site in
accordance with our new designs:

https://www.figma.com/design/2XzRDyXtthyzeNMZtdChTQ/Projects-site---Designs?node-id=10785-10811&m=dev

--- a/src/assets/stylesheets/Button.scss
+++ b/src/assets/stylesheets/Button.scss
@@ -150,7 +150,7 @@
 
     &:hover,
     .btn-outer:hover & {
-      background-color: inherit;
+      background-color: var(--tertiary-btn-hover-color, inherit);
     }
 
     &:disabled {
