Progress bar projects site refresh (#1313)
Adding some more vars to customise the progress bar/step navigation in
the Instructions Panel:
- `--progress-bar-color` - sets the colour of the progress bar, if not
set, defaults to the value of `--editor-color-theme`
- `--step-buttons-radius` - sets the border radius of step navigation
buttons (used in projects ui to make circular buttons)
- `--display-step-counter` - used to display the step counter added in
this PR. default to none, setting to `flex` will display the step
counter above the progress bar

Example of all of these in use in projects-ui

Before:
<img width="465" height="93" alt="image"
src="https://github.com/user-attachments/assets/e8e22475-1cb2-45b1-8940-5643762a22fc"
/>

After:
<img width="351" height="94" alt="image"
src="https://github.com/user-attachments/assets/c4a02bfc-844e-4313-ad37-a27ef2248ec8"
/>

--- a/src/assets/stylesheets/ProgressBar.scss
+++ b/src/assets/stylesheets/ProgressBar.scss
@@ -1,19 +1,42 @@
-@use './rpf_design_system/spacing' as *;
+@use "./rpf_design_system/spacing" as *;
 
 .progress-bar {
-  accent-color: var(--editor-color-theme);
+  accent-color: var(--progress-bar-color, var(--editor-color-theme));
   display: flex;
   align-items: center;
   justify-content: center;
-  max-inline-size: 300px;
   margin: auto;
+  gap: $space-1;
 
-  progress {
+  .progress-container {
     flex: 1;
     min-inline-size: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  progress {
+    width: 100%;
   }
 
   .btn-outer {
     padding: $space-0-5;
   }
+
+  .btn {
+    border-radius: var(--step-buttons-radius, inherit);
+    &:hover,
+    &:focus,
+    &:active {
+      border-radius: var(--step-buttons-radius, inherit);
+    }
+  }
+}
+
+.step-counter {
+  display: var(--display-step-counter, none);
+  align-items: center;
+  justify-content: center;
+  margin: 0;
 }
