--- a/src/assets/stylesheets/Instructions.scss
+++ b/src/assets/stylesheets/Instructions.scss
@@ -116,9 +116,11 @@
 
   .language-python {
     .number,
-    .boolean,
-    .function {
+    .boolean {
       color: var(--code-syntax-1, #{$rpf-syntax-1});
+    }
+    .function {
+      color: var(--code-syntax-5, #{$rpf-syntax-1});
     }
     .keyword {
       color: var(--code-syntax-4, #{$rpf-syntax-4});
