--- a/src/assets/stylesheets/Instructions.scss
+++ b/src/assets/stylesheets/Instructions.scss
@@ -53,7 +53,7 @@
     @include typography.style-1();
 
     background-color: var(--code-background-color, #{$rpf-grey-700});
-    border: 1px solid $rpf-grey-600;
+    border: 1px solid var(--code-block-border-color, #{$rpf-grey-600});
     border-radius: 8px;
     padding: $space-0-5 $space-1;
     overflow: auto;
@@ -73,7 +73,6 @@
     margin: $space-1 0 $space-1-5 0;
 
     pre {
-      border: none;
       margin: 0;
     }
 
