add custom padding to progress bar and sidebar footer

--- a/src/assets/stylesheets/ProgressBar.scss
+++ b/src/assets/stylesheets/ProgressBar.scss
@@ -7,6 +7,7 @@
   justify-content: center;
   margin: auto;
   gap: $space-1;
+  padding-block: var(--progress-bar-padding, inherit);
 
   .progress-container {
     flex: 1;
