--- a/src/assets/stylesheets/Sidebar.scss
+++ b/src/assets/stylesheets/Sidebar.scss
@@ -121,7 +121,7 @@
 }
 
 .sidebar__panel--with-footer {
-  padding-block-end: $space-2;
+  padding-block-end: var(--sidebar-footer-padding, $space-2);
 }
 
 .sidebar__panel-heading {
