--- a/src/assets/stylesheets/Instructions.scss
+++ b/src/assets/stylesheets/Instructions.scss
@@ -7,6 +7,10 @@
 .project-instructions {
   block-size: 100%;
 
+  &__content {
+    padding-block-end: var(--project-instructions-padding);
+  }
+
   h2 {
     @include typography.style-1-5(bold);
     margin: 0;
