--- a/src/assets/stylesheets/Instructions.scss
+++ b/src/assets/stylesheets/Instructions.scss
@@ -9,6 +9,7 @@
 
   h2 {
     @include typography.style-1-5(bold);
+    margin-block-start: $space-0-5;
   }
 
   p {
@@ -25,6 +26,16 @@
 
   img {
     max-inline-size: 100%;
+  }
+
+  // Steps in CCP style
+  [id^="step-"]{
+    background: #ECF8EE;
+    border-radius: $space-0-5;
+    color: #276D32;
+    display: inline-block;
+    margin: $space-2-5 0 0 0;
+    padding: $space-0-25 $space-0-5;
   }
 
   table {
