use space token instaed of rem

--- a/src/assets/stylesheets/Instructions.scss
+++ b/src/assets/stylesheets/Instructions.scss
@@ -100,7 +100,7 @@
       background-image: url("../play_filled.svg");
       background-repeat: no-repeat;
       background-position: center;
-      background-size: 1.5rem 1.5rem;
+      background-size: $space-1-5 $space-1-5;
     }
   }
 
