--- a/src/assets/stylesheets/Instructions.scss
+++ b/src/assets/stylesheets/Instructions.scss
@@ -75,7 +75,7 @@
     border-radius: $space-0-5;
     color: #276D32;
     display: inline-block;
-    margin: $space-2 0 0 0;
+    margin: $space-1-5 0 0 0;
     padding: $space-0-25 $space-0-5;
   }
 
