Projects site styling fixes (#1332)
various fixes for projects-ui:

- uses custom border radius for secondary buttons
- improved padding around progress bar
- fix some border spacing issues in sidebar 
- add custom padding to instruction panel

--- a/src/assets/stylesheets/Instructions.scss
+++ b/src/assets/stylesheets/Instructions.scss
@@ -7,6 +7,10 @@
 .project-instructions {
   block-size: 100%;
 
+  &__content {
+    padding-block-end: var(--project-instructions-padding, $space-1);
+  }
+
   h2 {
     @include typography.style-1-5(bold);
     margin-block-start: $space-0-5;
